# yolov5_obb

./: .gitignore  .gitmodules  README.md  divide.py  export.py  requirements.txt  val.py
DOTA_devkit/: polyiou.py
data/: dotav2_poly.yaml
deploy/onnxruntime/python/: main.py
deploy/opencv/cpp/: CMakeLists.txt  main.cpp
deploy/opencv/cpp/obb/include/: yolo_obb.h
deploy/opencv/cpp/obb/src/: yolo_obb.cpp
models/: yolo.py
sh/: ddp_train.sh
utils/: autoanchor.py  datasets.py  general.py  loss.py  plots.py
utils/nms_rotated/src/: poly_nms_cuda.cu
